# guntamatic

./: .gitignore  Dockerfile  docker-build.sh
.cargo/: config.toml
guntamatic-cli/: Cargo.toml
guntamatic-cli/src/: main.rs
guntamatic-cli/src/web/: get.rs  mod.rs
guntamatic-cli/src/web/stream/: mod.rs  sink_influxdb.rs
guntamatic-web/: Cargo.toml
guntamatic-web/src/lib/: daq.rs
