[package]
name = "guntamatic-cli"
version = "0.2.1"
authors = ["swimmes <wimmesberger@gmail.com>", "geropl <gero.posmyk-leinemann@typefox.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "guntamatic"
path = "src/main.rs"

[features]
default = ["sink_influxdb"]
sink_influxdb = ["influxdb2"]
# sink_prometheus = ["prometheus", "warp"]


[dependencies]
guntamatic-web = { path = "../guntamatic-web" }
clap = { version = "4.5.4", features = ["env", "derive"] }

# error handling
anyhow = "1.0.82"
thiserror = "1.0.59"

# logging
pretty_env_logger = "0.5.0"
log = "0.4.21"

# runtime + support
tokio = { version = "1.37.0", default-features = false, features = ["macros", "rt", "rt-multi-thread", "time"] }
tokio-stream = "0.1.15"
ctrlc = "3.4.4"
# async-net = "1.5.0"
flume = "0.11.0"

# # sink_prometheus
# prometheus = { version = "0.11.0", optional = true }
# warp = { version = "0.3.0", optional = true }

# sink_influxdb
influxdb2 = { version = "0.5.0", features = ["rustls"], default-features = false, optional = true }

# misc
hex = "0.4.3"
pretty_assertions = "1.4.0"
lazy_static = "1.4.0"
regex = "1.10.4"
