[package]
name = "guntamatic-web"
version = "0.1.0"
authors = ["geropl <gero.posmyk@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "guntamatic_web"
path = "src/lib/mod.rs"

[dependencies]
reqwest = { version = "0.12.4", default-features = false, features = ["json", "rustls-tls"] }
http = "1.1.0"
http-types = "2.12.0"

serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
serde_qs = "0.13.0"
serde_repr = "0.1.10"

log = "0.4.21"
thiserror = "1.0.59"
anyhow = "1.0.82"
